--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/08.02.Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/08.02.Synthesis.yml
@@ -5,7 +5,7 @@ defaults:
   - Textbooks
   - Math
   - Calculus
-  - Synthesis
+  - Theory
   - SingleVariableEssentialCalculus
   - SVEC-08-Series
   - SVEC-08.02-Series
@@ -16,7 +16,7 @@ notes:
   skip: true
   fields:
     Front: |
-      SVEC-08.02-00 Synthesis Notes:
+      SVEC-08.02-00 Theory Notes:
 
       Summary of definitions:
 
@@ -46,7 +46,7 @@ notes:
 - id: 1584573283091
   fields:
     Front: |
-      SVEC-08.02-01 Synthesis:
+      SVEC-08.02-01 Theory:
       ##### Basic Series Theory:
       List the basic series definitions.
     Back: |
@@ -60,14 +60,15 @@ notes:
         - **Geometric Series**
         - **Harmonic Series**
         - **Telescoping Series**
-    Annotations: "Fix me:<div>- 200328-2044: Remove #2, it's covered in #4.</div>"
+    Annotations: "Fix me:<div>- 200328-2044: Remove #2, it's covered in #4.</div><div>-\
+      \ 200414-2307: memory: forgot associated seqs.</div>"
   tags:
   - Definitions
   - ann:fix-me
 - id: 1584573469191
   fields:
     Front: |
-      SVEC-08.02-02 Synthesis:
+      SVEC-08.02-02 Theory:
       ##### Basic Series Theory:
       List the basic series theorems.
     Back: |
@@ -79,9 +80,10 @@ notes:
         - Constant Multiple
         - Sum
         - Difference
-    Annotations: ''
+    Annotations: 'Trouble:<div>- 200414-2311: memory: forgot to include limit laws.</div>'
   tags:
   - Theorems
+  - ann:trouble
 ---
 defaults:
   deckName: Staging
@@ -90,7 +92,7 @@ defaults:
   - Textbooks
   - Math
   - Calculus
-  - Synthesis
+  - Theory
   - Definition
   - SingleVariableEssentialCalculus
   - SVEC-08-Series
@@ -101,7 +103,7 @@ notes:
 - id: 1584573554315
   fields:
     Front: |
-      SVEC-08.02-03 Synthesis:
+      SVEC-08.02-03 Theory:
       ##### Basic Series Theory:
       Define **series.** How is it denoted?
     Back: |
@@ -120,7 +122,7 @@ notes:
 - id: 1584573644466
   fields:
     Front: |
-      SVEC-08.02-04 Synthesis:
+      SVEC-08.02-04 Theory:
       ##### Basic Series Theory:
       Define **partial sum.**
     Back: |
@@ -128,12 +130,14 @@ notes:
       $$
       s_{n}=\sum_{i=1}^{n} a_{i}=a_{1}+a_{2}+\cdots+a_{n}
       $$
-    Annotations: ''
-  tags: []
+    Annotations: 'Trouble:<div>&nbsp;200414-2246: memory: forgot to include \(s_n\)
+      in definition.</div>'
+  tags:
+  - ann:trouble
 - id: 1584574083915
   fields:
     Front: |
-      SVEC-08.02-05 Synthesis:
+      SVEC-08.02-05 Theory:
       ##### Basic Series Theory:
       Define **convergent,** **divergent,** and **sum.**
     Back: |
@@ -154,7 +158,7 @@ defaults:
   - Textbooks
   - Math
   - Calculus
-  - Synthesis
+  - Theory
   - Theorem
   - SingleVariableEssentialCalculus
   - SVEC-08-Series
@@ -165,7 +169,7 @@ notes:
 - id: 1585245407292
   fields:
     Front: |
-      SVEC-08.02-06 Synthesis:
+      SVEC-08.02-06 Theory:
       ##### Basic Series Theory:
       What are the **associated sequences** of any given series $\sum a_{n}$?
     Back: |
@@ -175,7 +179,7 @@ notes:
 - id: 1584574345616
   fields:
     Front: |
-      SVEC-08.02-07 Synthesis:
+      SVEC-08.02-07 Theory:
       ##### Basic Series Theory:
       What is a **geometric series? common ratio?**
     Back: |
@@ -193,7 +197,7 @@ notes:
 - id: 1584574581365
   fields:
     Front: |
-      SVEC-08.02-08 Synthesis:
+      SVEC-08.02-08 Theory:
       ##### Basic Series Theory:
       What is an **harmonic series?**
     Back: |
@@ -209,7 +213,7 @@ notes:
 - id: 1584651775340
   fields:
     Front: |
-      SVEC-08.02-09 Synthesis:
+      SVEC-08.02-09 Theory:
       ##### Basic Series Theory:
       What is a **telescoping sum? series?**
     Back: |
@@ -254,7 +258,7 @@ notes:
 - id: 1584575031215
   fields:
     Front: |
-      SVEC-08.02-10 Synthesis:
+      SVEC-08.02-10 Theory:
       ##### Basic Series Theory:
       State the **Geometric Series Test.** List its hypotheses and conclusions.
     Back: |
@@ -291,7 +295,7 @@ notes:
 - id: 1584575200491
   fields:
     Front: |
-      SVEC-08.02-11 Synthesis:
+      SVEC-08.02-11 Theory:
       ##### Basic Series Theory:
       State the **Harmonic Series Divergence Theorem.**
     Back: |
@@ -307,7 +311,7 @@ notes:
 - id: 1584652990541
   fields:
     Front: |
-      SVEC-08.02-12 Synthesis:
+      SVEC-08.02-12 Theory:
       ##### Basic Series Theory:
       State the **Telescoping Series Test.** List its hypotheses and conclusions.
     Back: |
@@ -327,26 +331,28 @@ notes:
       Riffs:
 
       - Every series is telescoping: let $s_n = \sum_{i=1}^n a_n$, let $b_1$ be any number, and define $b_{n+1} = b_1 - s_n$. Then $s_n = b_1 - b_{n+1}$.
-    Annotations: "Fix me:<div>- 200326-1446: <b>Wrong:&nbsp;</b>this should be rewritten\
-      \ to match the instructor's definition: \\(a_n = b_n - c_n\\).</div><div>- 200328-1940:\
-      \ change the convergence/divergence criteria to \\(\\lim_{n \\to \\infty}a_n\\\
-      ).</div><div><br></div><div>Thoughts:</div><div>- 200326-1446: the instructor's\
-      \ definition allows for such cases as \\(\\sum \\frac{2}{n(n+2)} = \\sum \\\
-      left(\\frac{1}{n} - \\frac{1}{n+2}\\right)\\), which converges to \\(\\frac{3}{2}\\\
-      ).</div><div><br></div><div>Questions:</div><div>- 200326-1446: verify: does\
-      \ the instructor consider \\(\\sum \\frac{2}{n(n+2)} = \\sum \\left(\\frac{1}{n}\
-      \ - \\frac{1}{n+2}\\right)\\) to be telescoping?</div><div>&nbsp; - 200328-1939:\
-      \ <b>Answer:</b>&nbsp;from instructor: it is not telescoping (not in this form,\
-      \ anyway) because the terms don't cancel.</div><div><br></div><div><br></div>"
+    Annotations: "<div>Trouble:</div><div>- 200414-1244: memory: answered in conditional\
+      \ instead of biconditional.</div><div><br></div>Fix me:<div>- 200326-1446: <b>Wrong:&nbsp;</b>this\
+      \ should be rewritten to match the instructor's definition: \\(a_n = b_n - c_n\\\
+      ).</div><div>- 200328-1940: change the convergence/divergence criteria to \\\
+      (\\lim_{n \\to \\infty}a_n\\).</div><div><br></div><div>Thoughts:</div><div>-\
+      \ 200326-1446: the instructor's definition allows for such cases as \\(\\sum\
+      \ \\frac{2}{n(n+2)} = \\sum \\left(\\frac{1}{n} - \\frac{1}{n+2}\\right)\\),\
+      \ which converges to \\(\\frac{3}{2}\\).</div><div><br></div><div>Questions:</div><div>-\
+      \ 200326-1446: verify: does the instructor consider \\(\\sum \\frac{2}{n(n+2)}\
+      \ = \\sum \\left(\\frac{1}{n} - \\frac{1}{n+2}\\right)\\) to be telescoping?</div><div>&nbsp;\
+      \ - 200328-1939: <b>Answer:</b>&nbsp;from instructor: it is not telescoping\
+      \ (not in this form, anyway) because the terms don't cancel.</div><div><br></div><div><br></div>"
   tags:
   - ann:answers
   - ann:fix-me
   - ann:questions
   - ann:thoughts
+  - ann:trouble
 - id: 1584575457215
   fields:
     Front: |
-      SVEC-08.02-13 Synthesis:
+      SVEC-08.02-13 Theory:
       ##### Basic Series Theory:
       State the **Divergence Test.** List its hypotheses and conclusions.
     Back: |
@@ -370,7 +376,7 @@ notes:
 - id: 1584575750091
   fields:
     Front: |
-      SVEC-08.02-14 Synthesis:
+      SVEC-08.02-14 Theory:
       ##### Series Theory:
       State the **Limit Laws for Series.** List their hypotheses.
     Back: |
@@ -382,5 +388,8 @@ notes:
       Hypotheses:
 
       - $\sum a_{n}$ and $\sum b_{n}$ are convergent series
-    Annotations: ''
-  tags: []
+    Annotations: 'Thoughts:<div>- 200414-2316: consider adding riffs: one conv., one
+      divergent implies sum/diff diverges; zero constant implies convergence of cm
+      no matter what; both divergent gives no info.</div>'
+  tags:
+  - ann:thoughts
