--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/08.06.Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/08.06.Synthesis.yml
@@ -5,7 +5,7 @@ defaults:
   - Textbooks
   - Math
   - Calculus
-  - Synthesis
+  - Theory
   - SingleVariableEssentialCalculus
   - SVEC-08-Series
   - SVEC-08.06-RepresentingFunctionsAsPowerSeries
@@ -16,7 +16,7 @@ notes:
   skip: true
   fields:
     Front: |
-      SVEC-08.06-00 Synthesis Notes:
+      SVEC-08.06-00 Theory Notes:
       #### Summary of definitions:
 
       1. **term-by-term differentiation and integration**
@@ -30,7 +30,7 @@ notes:
 - id: 1585680654541
   fields:
     Front: |
-      SVEC-08.06-01 Synthesis:
+      SVEC-08.06-01 Theory:
       #### Power Series Representation
       List the power-series representation definitions.
     Back: |
@@ -42,15 +42,15 @@ notes:
 - id: 1585680654697
   fields:
     Front: |
-      SVEC-08.06-02 Synthesis:
+      SVEC-08.06-02 Theory:
       #### Power Series Representation
       List the power-series representation theorems.
     Back: |
       1. **Term-By-Term Differentiation and Integration Theorem**
     Annotations: ''
   tags:
-  - Theorems
   - Editing
+  - Theorems
 ---
 defaults:
   deckName: Staging
@@ -59,7 +59,7 @@ defaults:
   - Textbooks
   - Math
   - Calculus
-  - Synthesis
+  - Theory
   - Definition
   - SingleVariableEssentialCalculus
   - SVEC-08-Series
@@ -70,7 +70,7 @@ notes:
 - id: 1585680654892
   fields:
     Front: |
-      SVEC-08.06-03 Synthesis:
+      SVEC-08.06-03 Theory:
       #### Power Series Representation
       Define **term-by-term differentiation and integration**.
     Back: |
@@ -87,7 +87,7 @@ defaults:
   - Textbooks
   - Math
   - Calculus
-  - Synthesis
+  - Theory
   - Theorem
   - SingleVariableEssentialCalculus
   - SVEC-08-Series
@@ -98,7 +98,7 @@ notes:
 - id: 1585680655092
   fields:
     Front: |
-      SVEC-08.06-04 Synthesis:
+      SVEC-08.06-04 Theory:
       #### Power Series Representation
       State the **Term-By-Term Differentiation and Integration Theorem**. List its hypotheses and conclusions.
     Back: |
@@ -126,6 +126,9 @@ notes:
       - $f^{\prime}(x)$ $=c_{1}+2 c_{2}(x-a)+3 c_{3}(x-a)^{2}+\cdots$ $=\sum_{n=1}^{\infty} n c_{n}(x-a)^{n-1}.$
       - $\int f(x) d x$ $=C+c_{0}(x-a)+c_{1} \frac{(x-a)^{2}}{2}+c_{2} \frac{(x-a)^{3}}{3}+\cdots$ $=C+\sum_{n=0}^{\infty} c_{n} \frac{(x-a)^{n+1}}{n+1}.$
       - The radii of convergence of $f^{\prime}(x)$ and $\int f(x) d x$ are both $R$.
-    Annotations: ''
+    Annotations: 'Trouble:<div>- 200415-0045: memory:</div><div>&nbsp; - Forgot details
+      wrt \(R\) (hyp: \(R&gt;0\); concl: \(R\) unchanged by ops).</div><div>&nbsp;
+      - Forgot conclusion of differentiability.</div>'
   tags:
   - Editing
+  - ann:trouble
