--- a/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/11.04.Synthesis.yml
+++ b/Math/Textbooks/Calculus/SingleVariableEssentialCalculus/11.04.Synthesis.yml
@@ -5,7 +5,7 @@ defaults:
   - Textbooks
   - Math
   - Calculus
-  - Synthesis
+  - Theory
   - SingleVariableEssentialCalculus
   - SVEC-11-PartialDerivatives
   - SVEC-11.04-TangentPlanesAndLinearApproximations
@@ -15,7 +15,7 @@ notes:
 - id: 1589314315517
   fields:
     Front: |
-      SVEC-11.04-01 Synthesis:
+      SVEC-11.04-01 Theory:
       List the tangent-plane and linear-approximation definitions and theorems.
     Back: |
       ###### Tangent Planes
@@ -41,7 +41,7 @@ notes:
   - path: ¢{file_dir}/images/SVEC-11.04-02.Sy.1.jpg
   fields:
     Front: |
-      SVEC-11.04-02 Synthesis:
+      SVEC-11.04-02 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Tangent Planes
@@ -58,7 +58,7 @@ notes:
 - id: 1589314728818
   fields:
     Front: |
-      SVEC-11.04-03 Synthesis:
+      SVEC-11.04-03 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Tangent Planes
@@ -77,7 +77,7 @@ notes:
 - id: 1589315356968
   fields:
     Front: |
-      SVEC-11.04-04 Synthesis:
+      SVEC-11.04-04 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Linear Approximations
@@ -103,7 +103,7 @@ notes:
 - id: 1589318573043
   fields:
     Front: |
-      SVEC-11.04-05 Synthesis:
+      SVEC-11.04-05 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Linear Approximations
@@ -119,7 +119,7 @@ notes:
 - id: 1589318573290
   fields:
     Front: |
-      SVEC-11.04-06 Synthesis:
+      SVEC-11.04-06 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Linear Approximations
@@ -144,7 +144,7 @@ notes:
 - id: 1589318573541
   fields:
     Front: |
-      SVEC-11.04-07 Synthesis:
+      SVEC-11.04-07 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Linear Approximations
@@ -162,7 +162,7 @@ notes:
 - id: 1589319100268
   fields:
     Front: |
-      SVEC-11.04-08 Synthesis:
+      SVEC-11.04-08 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Differentials
@@ -182,7 +182,7 @@ notes:
 - id: 1589319846643
   fields:
     Front: |
-      SVEC-11.04-09 Synthesis:
+      SVEC-11.04-09 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Differentials
@@ -215,7 +215,7 @@ notes:
   - path: ¢{file_dir}/images/SVEC-11.04-10.Sy.1.jpg
   fields:
     Front: |
-      SVEC-11.04-10 Synthesis:
+      SVEC-11.04-10 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Differentials
@@ -231,7 +231,7 @@ notes:
 - id: 1589320974742
   fields:
     Front: |
-      SVEC-11.04-11 Synthesis:
+      SVEC-11.04-11 Theory:
       #### Partial Derivatives
       ##### Tangent Planes and Linear Approximations
       ###### Functions of Three or More Variables
